# GPT

./: .gitattributes  .gitignore  manage.py  pyproject.toml
gpt/: asgi.py  settings.py  urls.py  wsgi.py
model/: schema.py  serializer.py  urls.py  views.py
trained_model/: bigram.py  constants.py  inference.py  training.py
